[package]
name = "talps-manager"
version = "0.1.0"
description = "A simple task manager. "
authors = ["talps <19818962332@163.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
anyhow = "1.0.98"
tracing = "0.1.41"
tui-input = "0.12.1"

[[bin]]
name = "app"
path = "src/main.rs"

