[package]
name = "talps-manager"
version = "0.1.0"
description = "A simple task manager. "
authors = ["talps <19818962332@163.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tokio = {version = "1.0",features = ["full"]}
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-core-client = "18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

