[package]
name = "talps-manager"
version = "0.1.0"
description = "A simple task manager. "
authors = ["talps <19818962332@163.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tokio = {version = "1.0",features = ["full"]}
jsonrpsee = { version = "0.25.1" ,features = ["server","client","macros"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"

[[bin]]
name = "server"
path = "src/bin/server.rs"

